--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <input type="submit" value="Scrape">
         </form>
     </div>
-
+    <script src="/static/script.js"></script>
     <script>
         document.getElementById("scrapeForm").addEventListener("submit", function (event) {
             event.preventDefault();
